--- a/project.json
+++ b/project.json
@@ -21,6 +21,7 @@
           "src/assets"
         ],
         "styles": [
+          "@angular/material/prebuilt-themes/deeppurple-amber.css",
           "src/styles.css"
         ],
         "scripts": []
@@ -80,6 +81,7 @@
           "src/assets"
         ],
         "styles": [
+          "@angular/material/prebuilt-themes/deeppurple-amber.css",
           "src/styles.css"
         ],
         "scripts": []
