--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,15 +15,16 @@
       "@feature-content-selector-tabs": [
         "./src/libs/feature-content-selector-tabs/src/index.ts"
       ],
+      "@feature-photo-list": ["./src/libs/feature-photo-list/src/index.ts"],
       "@feature-profile-header": [
         "./src/libs/feature-profile-header/src/index.ts"
       ],
       "@feature-profile-stories": [
         "./src/libs/feature-profile-stories/src/index.ts"
       ],
-      "@feature-photo-list": [
-        "./src/libs/feature-photo-list/src/index.ts"
-      ]
+      "@http-account-details": ["./src/libs/http-account-details/src/index.ts"],
+      "@model-account-details": ["./src/libs/model-account-details/src/index.ts"],
+      "@store": ["./src/libs/store/src/index.ts"]
     }
   }
 }
